--- a/requirements.txt
+++ b/requirements.txt
@@ -112,4 +112,4 @@ wcwidth==0.2.5; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 widgetsnbextension==3.5.1; python_version >= "3.6"
 zipp==3.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.5.0"
--e .[user]
+.[user]
