--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -286,6 +286,7 @@
     "pylinac",
     "pylint",
     "pylint's",
+    "pylintrc",
     "pymedphys",
     "pymssql",
     "pynetdicom",
@@ -345,6 +346,7 @@
     "tpscompare",
     "tqdm",
     "tsize",
+    "tuple",
     "tutes",
     "uids",
     "uint",
